# esp32devboard_v01r04

./: CMakeLists.txt  README.md  sdkconfig
components/digital_io/: CMakeLists.txt  digital_io.c
components/digital_io/include/: digital_io.h
components/esp32-devboard_v01r04/: CMakeLists.txt  esp32-devboard_v01r04.c
components/esp32-devboard_v01r04/hal/: adc.c  adc.h  digital_io.c  digital_io.h  hal_types.h  keyboard.c  keyboard.h  lcd.c  lcd.h  pinout.h  serial_io.c  serial_io.h  stepmotor.c  stepmotor.h
components/esp32-devboard_v01r04/include/: esp32-devboard_v01r04.h
components/keyboard/: CMakeLists.txt  keyboard.c
components/keyboard/include/: keyboard.h
components/lcd/: CMakeLists.txt  lcd.c
components/lcd/include/: lcd.h
components/piscaLed/: CMakeLists.txt  piscaLed.c
components/piscaLed/include/: piscaLed.h
components/serial_io/: CMakeLists.txt  serial_io.c
components/serial_io/include/: serial_io.h
components/wifi/: CMakeLists.txt  index.html  wifi.c
components/wifi-ap-webserver/: CMakeLists.txt  wifi-ap-webserver.c
components/wifi-ap-webserver/include/: wifi-ap-webserver.h
components/wifi-ap-webserver/webpages/: index.html  pages.c  pages.h
main/: CMakeLists.txt  testaPerifericos.c
